# sleap-roots-predict

./: .dockerignore  .env.example  .gitattributes  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pr31_diff_scratch.txt  process_plates_timelapse.ipynb  pyproject.toml
.claude/commands/: ci-debug.md  cleanup-merged.md  copilot-review.md  coverage.md  docs-review.md  fix-formatting.md  lint.md  new-feature.md  pr-description.md  pre-merge.md  review-openspec.md  review-pr.md  run-ci-locally.md  tdd.md  test.md  update-changelog.md  validate-env.md
.github/workflows/: ci.yml  docker-build.yml  publish.yml
docs/superpowers/plans/: 2026-07-06-predict-container-cli.md
docs/superpowers/specs/: 2026-07-02-rebuild-inference-core-design.md  2026-07-03-warm-model-worker-design.md  2026-07-05-flip-default-live-registry-design.md  2026-07-05-predict-output-contract-design.md  2026-07-06-param-resolution-design.md  2026-07-06-predict-container-cli-design.md  2026-07-15-consume-contracts-params-design.md  2026-07-22-consume-contracts-prediction-manifest-design.md
docs/upstream/: sleap-nn-legacy-brightness-issue.md
examples/: example_process_experiment.py
openspec/: project.md
openspec/changes/add-param-resolution/: design.md  proposal.md
openspec/changes/add-param-resolution/specs/param-resolution/: spec.md
openspec/changes/add-predict-container-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-predict-container-cli/specs/predict-container/: spec.md
openspec/changes/add-predict-output-contract/: design.md  proposal.md  tasks.md
openspec/changes/add-predict-output-contract/specs/prediction-output/: spec.md
openspec/changes/add-warm-model-worker/: design.md  proposal.md  tasks.md
openspec/changes/add-warm-model-worker/specs/model-management/: spec.md
openspec/changes/archive/2026-07-03-rebuild-inference-core/: proposal.md  tasks.md
openspec/changes/archive/2026-07-05-add-predict-output-contract/: tasks.md
openspec/changes/archive/2026-07-05-add-warm-model-worker/: tasks.md
openspec/changes/archive/2026-07-05-add-warm-model-worker/specs/model-management/: spec.md
openspec/changes/archive/2026-07-06-add-param-resolution/: tasks.md
openspec/changes/archive/2026-07-06-flip-default-live-registry/: proposal.md  tasks.md
openspec/changes/archive/2026-07-06-flip-default-live-registry/specs/model-management/: spec.md
openspec/changes/archive/2026-07-07-add-predict-container-cli/: tasks.md
openspec/changes/archive/2026-07-15-consume-contracts-params/: proposal.md  tasks.md
openspec/changes/archive/2026-07-22-consume-contracts-prediction-manifest/: tasks.md
openspec/changes/archive/2026-07-22-consume-contracts-prediction-manifest/specs/prediction-output/: spec.md
openspec/changes/consume-contracts-params/: tasks.md
openspec/changes/consume-contracts-params/specs/model-management/: spec.md
openspec/changes/consume-contracts-params/specs/param-resolution/: spec.md
openspec/changes/consume-contracts-prediction-manifest/: proposal.md  tasks.md
openspec/changes/flip-default-live-registry/: design.md  tasks.md
openspec/changes/rebuild-inference-core/: design.md  proposal.md  tasks.md
openspec/changes/rebuild-inference-core/specs/prediction/: spec.md
openspec/specs/model-management/: spec.md
openspec/specs/param-resolution/: spec.md
openspec/specs/predict-container/: spec.md
openspec/specs/prediction/: spec.md
openspec/specs/prediction-output/: spec.md
sleap_roots_predict/: __init__.py  __main__.py  batch.py  model_registry.py  model_selection.py  output_contract.py  param_resolution.py  plates_timelapse_experiment.py  predict.py  tracking.py  video_utils.py  warm_worker.py
tests/: conftest.py  test_acceptance.py  test_batch.py  test_env_docs.py  test_gpu.py  test_model_registry.py  test_model_selection.py  test_output_contract.py  test_param_resolution.py  test_plates_timelapse_experiment.py  test_predict.py  test_predict_container_packaging.py  test_public_api.py  test_tracking.py  test_video_utils.py  test_warm_worker.py
tests/assets/: README.md
tests/assets/scans/scanCPTEST0/: scanCPTEST0.scan_metadata.json
tests/data/: CMTN_KITXvsHK1-3_META.csv
