[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sleap-roots-predict"
authors = [
    {name = "Elizabeth Berrigan", email = "eberrigan@salk.edu"},
]
description = "A lightweight CLI and library that uses sleap-nn for prediction and produces artifacts in the format expected by sleap-roots pipelines. Intended to interoperate with the sleap-roots model registry."
requires-python = ">=3.11"
keywords = ["sleap", "pose estimation", "deep learning", "sleap-roots"]
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "sleap-io",
    "numpy",
    "pandas",
    "h5py",
    "imageio",
    "sleap-roots-contracts==0.1.0a3",
    # wandb is already a transitive dependency of sleap-nn 0.3.0; declared here
    # because WandbRegistrySource imports it directly (kept as a lazy import).
    "wandb",
    ]
    
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["sleap_roots_predict"]

[tool.setuptools.dynamic]
version = {attr = "sleap_roots_predict.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "codespell",
    "pydocstyle",
    "toml",
    "twine",
    "build",
    "ipython",
    "ruff",
    "jupyterlab>=4.4.6",
    "ipykernel>=6.30.1",
    # Test-only: the downstream consumer, used by the output-contract acceptance test
    # (sleap_roots.Series.load). Predict does NOT runtime-depend on it (no cycle:
    # sleap-roots depends on the contract, not on predict). sleap-roots requires
    # sleap-io>=0.0.11 (open upper) and no sleap-nn, so it co-resolves with the
    # sleap-nn 0.3.0 pin (sleap-io 0.8.x).
    "sleap-roots",
]
# Platform-specific install profiles. Each pins sleap-nn 0.3.0 and selects a
# torch build; torch/torchvision are routed to the matching PyTorch index via
# [tool.uv.sources] below (uv index routing is NOT inherited from sleap-nn, so
# it must be declared here for CUDA wheels to resolve). These are mutually
# exclusive — see [tool.uv].conflicts.
# torch/torchvision are listed directly so [tool.uv.sources] can route them to
# the right PyTorch index per extra (uv requires the package to appear in the
# extra it is sourced for).
windows_cuda = ["sleap-nn[torch-cuda128]==0.3.0", "torch", "torchvision>=0.20.0"]
linux_cuda = ["sleap-nn[torch-cuda128]==0.3.0", "torch", "torchvision>=0.20.0"]
macos = ["sleap-nn[torch-cpu]==0.3.0", "torch", "torchvision>=0.20.0"]
cpu = ["sleap-nn[torch-cpu]==0.3.0", "torch", "torchvision>=0.20.0"]

[project.scripts]

[project.urls]
Repository = "https://github.com/talmolab/sleap-roots-predict"
Issues = "https://github.com/talmolab/sleap-roots-predict/issues"

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css,.venv,htmlcov,*.lock,*.html,.ruff_cache,.pytest_cache,.serena,.claude,*.ipynb'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not gpu and not acceptance and not wandb'"
markers = [
    "gpu: marks tests that require GPU/CUDA (run with '-m gpu'; deselected by default)",
    "acceptance: real-data acceptance tests gated on SRP_CYLINDER_DIR/SRP_MODEL_DIRS (run with '-m acceptance'; deselected by default)",
    "wandb: tests that hit the wandb registry, gated on WANDB_API_KEY (run with '-m wandb'; deselected by default)",
]

# --- uv install configuration -------------------------------------------------
# The platform extras (cpu/macos/windows_cuda/linux_cuda) are mutually exclusive
# torch build profiles. uv does not inherit sleap-nn's index routing, so torch
# and torchvision are pinned to the matching PyTorch index here.
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "macos" },
        { extra = "windows_cuda" },
        { extra = "linux_cuda" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "macos" },
    { index = "pytorch-cu128", extra = "windows_cuda" },
    { index = "pytorch-cu128", extra = "linux_cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "macos" },
    { index = "pytorch-cu128", extra = "windows_cuda" },
    { index = "pytorch-cu128", extra = "linux_cuda" },
]
